# fastapi-role

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  SYSTEM_BEHAVIOUR.md  example_usage.py  pyproject.toml  test_examples.py
.kiro/specs/fastapi-role-completion/: design.md  requirements.md  tasks.md
.repertoire/: .shallow
.repertoire/_metadata/: BIF.md  Development.md  Feature Lifecycle.md  How To Use.md  README.md
.repertoire/milestone/: analysis.md  design.md  milestone.md  rationale.md  requirements.md
config/: rbac_policy.csv
docs/: IMPLEMENTATION_GUIDE.md  SYSTEM_BEHAVIOUR.md  architecture.md  configuration.md  getting-started.md
examples/: README_file_based.md  README_minimal.md  comprehensive_rbac.py  file_based_rbac_example.py  minimal_rbac_example.py
examples/config/: policies.yaml  resources.yaml  roles.yaml  users.yaml
fastapi_role/: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  base.py  exception.py  pyproject.toml  rbac.py  rbac_service.py
fastapi_role/.github/workflows/: ci.yml  release.yml  security.yml
fastapi_role/core/: composition.py  config.py  ownership.py  roles.py
fastapi_role/docs/: api-reference.md  getting-started.md  migration-guide.md  provider-architecture.md
fastapi_role/fastapi_role/: __init__.py  base.py  exception.py  rbac.py  rbac_service.py
fastapi_role/fastapi_role/core/: config.py  ownership.py  resource.py  roles.py
fastapi_role/fastapi_role/helpers/: __init__.py
fastapi_role/fastapi_role/protocols/: __init__.py  database.py
fastapi_role/fastapi_role/providers/: __init__.py  database.py  default_ownership.py
fastapi_role/helpers/: query_filter.py
fastapi_role/legacy/: README.md
fastapi_role/protocols/: __init__.py  providers.py  user.py
fastapi_role/providers/: __init__.py  default_ownership.py
fastapi_role/tests/: conftest.py  test_business_coupling_removal.py  test_comprehensive_business_agnostic_validation.py  test_comprehensive_examples.py  test_comprehensive_integration.py  test_comprehensive_security_performance.py  test_config_flexibility.py  test_config_platformdirs.py  test_configuration_system_validation.py  test_decorator_architecture.py  test_decorator_architecture_comprehensive.py  test_dynamic_role_validation.py  test_ownership_final_validation.py  test_ownership_generic_validation.py  test_ownership_registry.py  test_ownership_system_validation.py  test_provider_architecture_validation.py  test_provider_protocols.py  test_provider_system_edge_cases.py  test_query_helpers.py  test_rbac_core.py  test_rbac_decorators_advanced.py  test_rbac_performance.py  test_rbac_performance_filtering.py  test_rbac_properties.py  test_rbac_service.py  test_rbac_service_wildcard_fallback.py  test_roles.py  test_security_and_performance_validation.py  test_service_injection_edge_cases.py  test_simple_property_tests.py  test_sync_session.py  test_user_model_rbac.py
milestone/: milestone.md  rationale.md  requirements.md
test_fastapi/: main.py  pyproject.toml
test_fastapi/test_fastapi/: __init__.py  __main__.py  auth.py  config.py  database.py  main.py  models.py  ownership_providers.py  rbac_setup.py  schemas.py  test_app.py
test_fastapi/test_fastapi/routers/: auth.py  documents.py  projects.py  tasks.py  users.py
test_fastapi/tests/: test_integration_validation.py
tests/: conftest.py  test_rbac_core.py  test_rbac_decorators_advanced.py  test_rbac_performance.py  test_rbac_performance_filtering.py  test_rbac_properties.py  test_rbac_service.py  test_roles.py  test_simple_decorator.py  test_simple_property_tests.py  test_user_model_rbac.py
