[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-role"
version = "0.1.0"
description = "A powerful and flexible Role-Based Access Control (RBAC) library for FastAPI applications, powered by Casbin"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "alaamer12", email = "ahmedmuhmmed239@gmail.com" }
]
keywords = [
    "fastapi",
    "rbac",
    "casbin",
    "authorization",
    "role-based-access-control",
    "security"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "casbin",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "jinja2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/alaamer12/fastapi-role"
Documentation = "https://github.com/alaamer12/fastapi-role#readme"
Repository = "https://github.com/alaamer12/fastapi-role"
Issues = "https://github.com/alaamer12/fastapi-role/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_role"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=fastapi_role"
