[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-role"
version = "0.1.0"
description = "A powerful and flexible Role-Based Access Control (RBAC) library for FastAPI applications, powered by Casbin"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "alaamer12", email = "ahmedmuhmmed239@gmail.com" }
]
keywords = [
    "fastapi",
    "rbac",
    "casbin",
    "authorization",
    "role-based-access-control",
    "security"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "casbin",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",           # Parallel test execution
    "pytest-sugar",           # Better test output
    "pytest-clarity",         # Better assertion diffs
    "pytest-icdiff",          # Improved diff output
    "pytest-emoji",           # Emoji test output
    "ruff",
    "mypy",
    "httpx",
    "hypothesis",
]

[project.urls]
Homepage = "https://github.com/alaamer12/fastapi-role"
Documentation = "https://github.com/alaamer12/fastapi-role#readme"
Repository = "https://github.com/alaamer12/fastapi-role"
Issues = "https://github.com/alaamer12/fastapi-role/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_role"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "UP045", # Old types pattern
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                           # Verbose output
    "-l",                           # Show local variables in tracebacks
    "-ra",                          # Show all test results summary
    "--strict-markers",             # Strict marker checking
    "-W", "default",                # Show warnings
    "--tb=short",                   # Short traceback format
    "--cov-report=term-missing",    # Terminal coverage with missing lines
    # "--maxfail=5",                # Commented out - let CI control this
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, full stack)",
    "slow: Slow tests",
    "ci_cd_issue: Tests that have known issues in CI/CD environment but pass locally",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Enhanced error reporting
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = false
