[project]
name = "fastapi-role-workspace"
version = "0.1.0"
description = "Monorepo workspace for fastapi-role library and integration tests"
requires-python = ">=3.9"
authors = [
    { name = "Alaamer", email = "ahmedmuhmmed239@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "fastapi_role",
    "test_fastapi"
]

[tool.uv.workspace]
members = ["fastapi_role", "test_fastapi"]


[tool.uv.sources]
fastapi-role = { workspace = true }
test-fastapi = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "E501", "B008", "W191", "UP045", "UP007", "UP035", "B010", "UP006",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["fastapi_role/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v", "-l", "-ra", "--strict-markers", "-W", "default", "--tb=short",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "ci_cd_issue: CI/CD issues",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
junit_family = "xunit2"
junit_log_passing_tests = false
