[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-role"
version = "1.0.0"
description = "Pure General RBAC Engine - Framework-agnostic Role-Based Access Control library with zero business assumptions, powered by Casbin."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Alaamer", email = "ahmedmuhmmed239@gmail.com" }
]
keywords = [
    "rbac",
    "casbin",
    "authorization",
    "role-based-access-control",
    "security",
    "framework-agnostic",
    "pure-rbac",
    "general-rbac",
    "business-agnostic",
    "fastapi",
    "flask",
    "django"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

dependencies = [
    "casbin>=1.17.0",
    "pydantic>=2.0.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
flask = [
    "flask>=2.0.0",
]
django = [
    "django>=4.0.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0.0",
]
all = [
    "fastapi>=0.100.0",
    "flask>=2.0.0", 
    "django>=4.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-icdiff",
    "pytest-emoji",
    "pytest-benchmark",
    "ruff",
    "mypy",
    "httpx",
    "hypothesis",
    "bandit",
    "safety",
    "pip-audit",
    "pip-licenses",
    "twine",
]

[project.urls]
Homepage = "https://github.com/alaamer12/fastapi-role"
Documentation = "https://github.com/alaamer12/fastapi-role#readme"
Repository = "https://github.com/alaamer12/fastapi-role"
Issues = "https://github.com/alaamer12/fastapi-role/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_role"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "E501", "B008", "W191", "UP045", "UP007", "UP035", "B010", "UP006",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v", "-l", "-ra", "--strict-markers", "-W", "default", "--tb=short",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "ci_cd_issue: CI/CD issues",
]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
junit_family = "xunit2"
junit_log_passing_tests = false
