[project]
name = "test-fastapi"
version = "0.1.0"
description = "Test application for fastapi-role"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "fastapi-role",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
fastapi-role = { workspace = true }
